<resources>
    <string name="app_name">Mi primera app</string>
    <string name="titulo1">App Ingles</string>
    <string name="botonsiguiente">siguiente</string>
    <string name="titulomenu">Menú</string>
    <string name="titulocolor">colores</string>
    <string name="tituloanimal">animales</string>
    <string name="titulofruta">frutas</string>
    <string name="animalgato">gato</string>
    <string name="animalperro">perro</string>
    <string name="animalpato">pato</string>
    <string name="colorosado">rosado</string>
    <string name="colorlila">lila</string>
    <string name="colorazul">azul</string>
    <string name="frutafresa">fresa</string>
    <string name="frutauva">uva</string>
    <string name="frutamango">mango</string>
    <string name="sonidoGato">play</string>
    <string name="juego">jugar</string>
    <string name="pregunta1">¿Cuál es </string>
    <string name="interrogacion"> ?</string>
    <string name="pregunta21">¿Cómo se dice</string>
    <string name="pregunta22"> UVA</string>
    <string name="pregunta23"> en ingles?</string>
    <string name="grape">Grape</string>
    <string name="strawberry">Strawberry</string>
    <string name="mango">Mango</string>
   <string name="duck">Duck</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="pink">Pink</string>
    <string name="español">en español?</string>
    <string name="blue">Blue</string>
    <string name="lilac">Lilac</string>


</resources>