<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pregunta3"
    android:orientation="vertical"
    android:background="@color/black">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta21"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="26dp"

            >


        </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animalpato"
        android:textSize="38dp"
        android:textColor="@color/rosadolavanda"
        android:layout_margin="5dp"
        >

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta23"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="26dp"

        >


    </TextView>

</LinearLayout>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pato"
            android:layout_marginTop="20dp">

        </ImageView>

    <LinearLayout

        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@color/rosadolavanda">

        <TextView
            android:id="@+id/textduck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/duck"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold">


        </TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@color/rosadolavanda"

        android:layout_marginTop="40dp"
        android:layout_width="215dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/textdog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">


        </TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@color/rosadolavanda"

        android:layout_marginTop="40dp"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold">


        </TextView>
    </LinearLayout>

</LinearLayout>