<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Animales"
    android:background="@color/black">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tituloanimal"
    android:textSize="70dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:textColor="@color/white">



</TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >

        <ImageView
            android:id="@+id/imagegato"
            android:layout_width="157dp"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/gato"

            >


        </ImageView>




           <TextView
               android:id="@+id/textGato"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/animalgato"
               android:textSize="50dp"
               android:layout_marginLeft="10dp"
               android:textColor="@color/white"
               >


           </TextView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >



        <ImageView
            android:id="@+id/imageperro"
            android:layout_width="157dp"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/perro">

        </ImageView>




        <TextView
            android:id="@+id/textperro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animalperro"
            android:textSize="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            >

        </TextView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imagepato"
            android:layout_width="166dp"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/pato">

        </ImageView>


        <TextView
            android:id="@+id/textpato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animalpato"
            android:textSize="50dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            >

        </TextView>
        </LinearLayout>


</LinearLayout>