<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pregunta1"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pregunta1"
    android:layout_gravity="center"
    android:textSize="40dp"
    android:fontFamily="sans-serif-medium"
   android:textColor="@color/white"
    >

</TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45dp"
            android:textColor="@color/rosadolavanda"
            android:layout_margin="5dp"
            android:text="@string/strawberry"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:text="@string/interrogacion">

        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenStrawberry"
        android:layout_width="199dp"
        android:layout_height="179dp"
        android:src="@drawable/fresa"
        android:layout_gravity="center">

    </ImageView>
    <ImageView
        android:id="@+id/imagenGrape"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:src="@drawable/uva"
        android:layout_gravity="center"
        >

    </ImageView>
    <ImageView
        android:id="@+id/imagenMango"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/mango"
        >

    </ImageView>

</LinearLayout>